<resources>
    <string name="app_name">SiKetan</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_next">Next</string>
    <string name="label_loading_apps_caps"><u>LOADING APPS</u></string>
    <string name="label_content_on_boarding">Sistem Informasi Kegiatan Penyuluhan Pertanian</string>
    <string name="label_login">Login</string>
    <string name="label_register">Registrasi</string>
    <string name="hint_email_phone">Email/ No. Hp</string>
    <string name="hint_nik_nip">NIK/NIP</string>
    <string name="hint_email">Email</string>
    <string name="hint_whatsapp">No. Whatsapp</string>
    <string name="hint_name">Nama</string>
    <string name="hint_password">Password</string>
    <string name="hint_password_conf">Confirm Password</string>
    <string name="label_new_account">Buat akun baru</string>
    <string name="label_forgot_password">Lupa Password?</string>
    <string name="label_login_with">Atau login dengan</string>
    <string name="label_login_with_google">Login dengan Google</string>
    <string name="label_login_with_fb">Login dengan Facebook</string>
    <string name="label_register2">Daftar</string>
    <string name="message_invalid_email">Email tidak valid</string>
    <string name="messsage_not_matches_password">Password tidak sama</string>
    <string name="format_message_required">%s harus diisi</string>
    <string name="message_error_check">Gagal melakukan autentikasi, cek kembali inputan anda</string>
    <string name="data_farming">Data Pertanian</string>
    <string name="label_close">CLOSE</string>
    <string name="label_cancel">YA CANCEL</string>
    <string name="format_label_start_date">Waktu Mulai : %s WIB</string>
    <string name="format_label_end_date">Waktu Pulang : %s WIB</string>
    <string name="format_label_location"><u>Tampat : %s</u></string>
    <string name="format_underline"><u>%s </u></string>
    <string name="label_read_more"><u>Baca Selengkapnya</u></string>
    <string name="format_label_price">Harga : %s,-</string>
    <string name="format_label_stock">Stok : %s</string>
    <string name="format_label_author">Ditulis Oleh : %s</string>
    <string name="message_about">SIKETAN adalah aplikasi Sistem Informasi Kegiatan Penyuluhan pertanian.\n\nAplikasi ini merupakan suatu platform untuk menjalin sinergi antara penyuluh pertanian dengan-petani Kab. Ngawi.\n\nDiharapkan, dapat membantu meningkatkan hubungan dengan petani dilapangan sehingga dapat membantu meningkatkan produktivitas petani di Kab. Ngawi</string>
    <string name="message_maintenance">Mohon maaf… Saat ini. Halaman ini sedang dalam perbaikan.</string>
    <string name="format_message_success">TERIMA KASIH… %s ANDA TELAH BERHASIL DI SIMPAN</string>
    <string name="message_cancel_input">APAKAH ANDA YAQIN UNTUK MEMBATALKAN INPUT DATA ?</string>
    <string name="baik_kerusakan_25"><![CDATA[BAIK (kerusakan < 25%)]]></string>
    <string name="sedang_kerusakan_25_50"><![CDATA[SEDANG (kerusakan < 25% - 50%)]]></string>
    <string name="berat_kerusakan_50_75"><![CDATA[BERAT (kerusakan < 50% - 75%)]]></string>
    <string name="puso_kerusakan_70"><![CDATA[PUSO (kerusakan > 70%)]]></string>
    <string name="hint_petani">Nama Petani</string>
    <string name="hint_penyuluh">Nama Penyuluh</string>
    <string name="format_jenis_panen">Jenis Panen: %s</string>
    <string name="format_luas_lahan">Luas Lahan: %s</string>
    <string name="format_tanggal">Tanggal : %s</string>
    <string name="format_judul_laporan">Laporan %s</string>
    <string name="hint_alamat">Alamat</string>
    <string name="label_selanjutnya">Selanjunya</string>
    <string name="keterangan_checkbox_ganti_pass">Ganti Password</string>
    <string name="hint_password_baru">Password Baru</string>
</resources>