<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.auth.authentication.RegisterFragment">

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/img_bg_login" />

    <LinearLayout
        android:id="@+id/ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="28dp"
        android:layout_marginBottom="120dp"
        android:background="@drawable/bg_rounded_black_opacity_10"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.wahidabd.siketan.utils.components.FormAuthentication
            android:id="@+id/edtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="28dp"
            android:layout_marginTop="@dimen/dimen_20dp"
            app:hintLabel="@string/hint_email"
            app:iconLabel="@drawable/ic_email"
            app:input_type="email" />

        <com.wahidabd.siketan.utils.components.FormAuthentication
            android:id="@+id/edtWhatsapp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="28dp"
            android:layout_marginTop="@dimen/dimen_20dp"
            app:hintLabel="@string/hint_whatsapp"
            app:iconLabel="@drawable/ic_whatsapp"
            app:input_type="number" />

        <com.wahidabd.siketan.utils.components.FormAuthentication
            android:id="@+id/edtName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="28dp"
            android:layout_marginTop="@dimen/dimen_20dp"
            app:hintLabel="@string/hint_name"
            app:iconLabel="@drawable/ic_person"
            app:input_type="text" />

        <com.wahidabd.siketan.utils.components.FormAuthentication
            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="28dp"
            android:layout_marginTop="@dimen/dimen_20dp"
            app:hintLabel="@string/hint_password"
            app:is_password="true"
            app:iconLabel="@drawable/ic_password"
            app:input_type="password" />

        <com.wahidabd.siketan.utils.components.FormAuthentication
            android:id="@+id/edtPasswordConf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="28dp"
            android:layout_marginTop="@dimen/dimen_20dp"
            app:hintLabel="@string/hint_password_conf"
            app:iconLabel="@drawable/ic_password"
            app:is_password="true"
            app:input_type="password" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnlogin"
            style="@style/MyText.Medium.White"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_marginHorizontal="26dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/bg_rounded_secondary_4"
            android:text="@string/label_register2"
            android:textAllCaps="false"
            android:textSize="@dimen/text_size_12sp"
            android:layout_marginBottom="30dp"/>


    </LinearLayout>

    <TextView
        style="@style/MyText.Bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="46dp"
        android:text="@string/label_register"
        android:textColor="@color/white"
        android:textSize="26sp"
        app:layout_constraintBottom_toTopOf="@id/ll"
        app:layout_constraintStart_toStartOf="@id/ll"
        app:layout_constraintTop_toTopOf="@id/ll" />

    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll"
        android:indeterminateTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>